[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "reinforcement learning self making project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "box2d>=2.3.10",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "minatar==1.0.12",
    "mujoco==3.1.3",
    "mushroom-rl[gym]==1.10.1",
    "pynput>=1.8.2",
    "pyyaml>=6.0.3",
    ]

[tool.setuptools.packages.find]
where = ["src"]      #find packages under the src file